- in mode "--unfold", when reading VASP OUTCAR files produced with IBRION<0, added an error message.
- in option "-bind-shells", when no shells are defined, atoms close to one another are considered as associated core/shell pairs.
- option "-reduce-cell" now checks that stoichiometry is preserved.
- random number generator will now use file "/dev/urandom" to generate a random seed whenever possible (only in UNIX/Linux systems); otherwise, system clock will be used as a seed.
- fixed a bug when reading and writing POSCAR files where the keywords "Selective dynamics" were involved.
- fixed a bug when writing LAMMPS data file when atom "types" were defined, but some types were not assigned to any atom in the system. Fixed bugs when reading or writing LAMMPS data files when shells were defined. Fixed a bug in the writing of box dimensions, when one or several box vectors had negative components. Thanks to Eerik Voimanen, Tampere University, Finland, for providing a fix for this bug.
- fixed a bug when writing files in DDplot format, that resulted in a SEGFAULT. Thanks to Wei Li, University of Hong-Kong, China, for pointing out this bug.
- fixed a bug in mode "--density", where the density was not correctly computed if the target property was the atomic mass. Thanks to Jean Furstoss, UMET, University of Lille, France, for pointing out this bug.
- new option "-dislocation file" allows reading a dislocation Burgers vector and position from a file. For now it supports only planar dislocation loops where the Burgers vector is contained in the loop plane.
- when input file has a non-supported binary format, an error message explicitely says so.
- fixed a bug in option "-cell" where option was skipped when requiring zero length for xy, yz, or xz component.
- fixed a bug in option "-dislocation", where the stress components for a screw dislocation were inverted.